# realtor_app

./: README.md  logfile
backend/: manage.py  pyproject.toml
backend/accounts/: models.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_useraccount_managers.py
backend/realtors/: admin.py  models.py  urls.py  views.py
backend/realtors/migrations/: 0001_initial.py
backend/zillownaire/: asgi.py  settings.py  urls.py  wsgi.py
