[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Realtor app backend for rolebased access"
authors = ["Travers La Ville <traverslaville@gmail.com>"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^10.0.0"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
